k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: todo
  labels:
    app.kubernetes.io/name: todo
    app.kubernetes.io/part-of: todo-fastapi
