k8s/04-mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: todo
  labels:
    app: mysql
spec:
  clusterIP: None
  selector:
    app: mysql
  ports:
    - name: mysql
      port: 3306
      targetPort: 3306
