k8s/07-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-service
  namespace: todo
  labels:
    app: todo-app
spec:
  type: NodePort
  selector:
    app: todo-app
  ports:
    - name: http
      port: 8000
      targetPort: 8000
      nodePort: 30080
